--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Clean Blog
+title:              Lab
 email:              lightnlight93@gmail.com
-description:        OS/Malware Analysis
+description:        OS/Malware
 author:             hanteok
 baseurl:            ""
 url:                "https://hanteok.github.io"
