--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              knowledge is power
+title:              MokLab
 email:              lightnlight93@gmail.com
 description:        low level knowledge, security analysist
 author:             hanteok
